--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
                 <section id="video">
                     <div class="video_box">
-                        <video src="video/main_video.mp4" muted loop autoplay>
+                        <video src="video/main_video.mp4" muted loop autoplay playsinline>
                             <source src="video/main_video.mp4" type="video/mp4">
                             <source src="video/main_video.webm" type="video/webm">
                         </video>
