--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <h1><a href="index.html">logo</a></h1>
                 <ul>
                     <li>about us</li>
-                    <li>news</li>044Xoxo2626
+                    <li>news</li>
                     <li>artwork</li>
                     <li>shop</li>
                     <li>contact us</li>
