modify index files

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
                 <section id="video">
                     <div class="video_box">
-                        <video src="video/main_video.mp4" muted loop autoplay playsinline poster="images/thumbnail.jpg">
+                        <video src="video/main_video.mp4" muted loop autoplay poster="images/thumbnail.jpg">
                             <source src="video/main_video.mp4" type="video/mp4">
                             <source src="video/main_video.webm" type="video/webm">
                         </video>
@@ -329,7 +329,7 @@
                     <p class="txt front_txt" id="front_txt3">HERE</p>
                 </section> <!-- fin -->
 
-                <section id="news">
+                <section id="news" class="news-container">
                     <h2>IAB studio NEWS</h2>
 
                     <div class="news-container">
@@ -405,9 +405,9 @@
                         <div class="swiper-button-next"></div>
                         <div class="swiper-button-prev"></div>
 
-                        <div class="bg_circle1"></div>
-                        <div class="bg_circle2"></div>
-                        <div class="bg_circle3"></div>
+                        <div id="bg_circle1" class="bg_circle"><img src="images/bg_circle1.png" alt="bg_circle1"></div>
+                        <div id="bg_circle2" class="bg_circle"><img src="images/bg_circle2.png" alt="bg_circle2"></div>
+                        <div id="bg_circle3" class="bg_circle"><img src="images/bg_circle3.png" alt="bg_circle3"></div>
                     </div>
                 </section> <!-- news -->
             </div> <!-- main -->
