--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
                             하얀 캔버스가 되길<br>
                             원합니다.
                         </p>
-                        <div class="tap"><a href="#">문의하기</a></div>
+                        <div class="tap">문의하기</div>
                     </div>
                     
                     <p class="txt back_txt" id="back_txt1">AND</p>
