modify index HTML, CSS, JS/jQuery

--- a/index.html
+++ b/index.html
@@ -5,19 +5,19 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
         <meta name="title" content="IAB studio">
-	<meta name="description" content="I've Always Been, IAB studio.">
-	<meta name="keywords" content="IAB studio, artwork, collaboration, fashion, merchandise">
-	<meta property="og:title" content="IAB studio">
-	<meta property="og:description" content="I've Always Been, IAB studio.">
-	<meta property="og:image" content="https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2Fn8Hzg%2FbtqKEACRDpe%2FUGa6kuYYULlIxKainb0cCk%2Fimg.png">
+	    <meta name="description" content="I've Always Been, IAB studio.">
+	    <meta name="keywords" content="IAB studio, artwork, collaboration, fashion, merchandise">
+	    <meta property="og:title" content="IAB studio">
+	    <meta property="og:description" content="I've Always Been, IAB studio.">
+	    <meta property="og:image" content="https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2Fn8Hzg%2FbtqKEACRDpe%2FUGa6kuYYULlIxKainb0cCk%2Fimg.png">
         <meta property="og:url" content="https://absolutelyfullycapable.github.io/iab-studio/index.html">
-	<!-- twitter card -->
-	<meta name="twitter:card" content="IAB studio">
-	<meta name="twitter:title" content="IAB studio">
-	<meta name="twitter:description" content="I've Always Been, IAB studio.">
-	<meta name="twitter:image" content="https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2Fn8Hzg%2FbtqKEACRDpe%2FUGa6kuYYULlIxKainb0cCk%2Fimg.png">
+	    <!-- twitter card -->
+	    <meta name="twitter:card" content="IAB studio">
+	    <meta name="twitter:title" content="IAB studio">
+	    <meta name="twitter:description" content="I've Always Been, IAB studio.">
+	    <meta name="twitter:image" content="https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2Fn8Hzg%2FbtqKEACRDpe%2FUGa6kuYYULlIxKainb0cCk%2Fimg.png">
         <meta name="twitter:url" content="https://absolutelyfullycapable.github.io/iab-studio/index.html">
-	<title>IAB studio</title>
+	    <title>IAB studio</title>
         <!-- favicon -->
         <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
         <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
@@ -44,7 +44,6 @@
 
     <body>
         <div class="container">
-            <!-- header -->
             <header>
                 <h1><a href="index.html">logo</a></h1>
                 <ul>
@@ -54,9 +53,9 @@
                     <li>shop</li>
                     <li>contact us</li>
                 </ul>
-            </header>
+            </header> <!-- header -->
 
-            <div class="main">
+            <div id="main">
                 <section id="title">
                     <img src="images/title.svg" alt="title">
                 </section> <!-- title -->
