--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700;900&family=Raleway:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
         <!-- font-family:'Noto Sans KR', 'Raleway', sans-serif; -->
         <!-- CSS 연결 -->
+        <link rel="stylesheet" href="common/normalize.css">
         <link rel="stylesheet" href="common/swiper-bundle.min.css">
         <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
         <link rel="stylesheet" href="css/index.css">
