modify index HTML, CSS

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <header>
                 <h1><a href="index.html">logo</a></h1>
                 <ul>
-                    <li>about us</li>
+                    <li><a href="about.html">about us</a></li>
                     <li>news</li>
                     <li>artwork</li>
                     <li>shop</li>
