modify index HTML, CSS - #learn_more

--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
             <div id="license">본 사이트는 비상업적 용도로 만들어진 포트폴리오용 사이트입니다. 사이트 제작 시 사용된 이미지의 라이센스는 IAB studio에게 있습니다.</div>
 
             <div id="go_to_top"></div>
-            <div id="learn_more">더 알아보기</div>
+            <div id="learn_more"><a href="about.html">더 알아보기</a></div>
         </div> <!-- container -->
 
         <script>
