modify index HTML

--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
                 <ul>
                     <li>1522-0370</li>
                     <li><a href="mailto:info@iab-studio.com">info@iab-studio.com</a></li>
-                    <li><a href="https://www.instagram.com/iabstudio/" target="_blank">Instagram</a></li>
+                    <li><a href="#">Instagram</a></li>
                 </ul>
                 <ul>
                     <li><a href="https://absolutelyfullycapable.github.io/portfolio" target="_blank">포트폴리오 바로 가기</a></li>
