--- a/about.html
+++ b/about.html
@@ -143,8 +143,8 @@
                                             <li>
                                                 <p>02</p>
                                                 <p>
-                                                    주효+핫펠트, 빈지노, <span>PEEJAY</span>,<br>
-                                                    수란의 아트워크 담당
+                                                    주효+핫펠트, 빈지노, <span>PEEJAY</span>, 수란의 <br>
+                                                    아트워크 담당
                                                 </p>
                                             </li>
                                         </ul>
@@ -167,8 +167,8 @@
                                             <li>
                                                 <p>03</p>
                                                 <p>
-                                                    <span>Worksout, DUNHILL Switch,<br>
-                                                    PEPERO, Kiehls, collagE</span>와 협업
+                                                    <span>Worksout, DUNHILL Switch, PEPERO,<br>
+                                                    Kiehls, collagE</span>와 협업
                                                 </p>
                                             </li>
                                             <li>
