modify about HTML - change description

--- a/about.html
+++ b/about.html
@@ -75,7 +75,7 @@
                             세상은 변하지만 그 속의 본질은<br>
                             변하지 않는다고 생각합니다.<br>
                             <br>
-                            또 <span>IAB studio</span>는 자기 자신을 더욱<br>
+                            <span>IAB studio</span>는 자기 자신을 더욱<br>
                             확장할 수 있게 하는 근본은 스스로의<br>
                             본질이라 여기며, 그 본질을 가지고<br>
                             변화하는 세상에 '나'라는 뿌리를 내려<br>
