--- a/about.html
+++ b/about.html
@@ -261,7 +261,7 @@
                 </section>
             </div> <!-- main -->
             <footer>
-                <img src="images/logo.png" alt="logo">
+                <img src="images/logo.png" alt="IAB studio">
                 <p>
                     서울시 강남구 봉은사로 20 3층<br>
                     사업자 등록 번호 575-580-0034
