--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <body>
         <div class="container">
             <header>
-                <h1><a href="index.html">logo</a></h1>
+                <h1><a href="index.html">IAB studio</a></h1>
                 <ul>
                     <li><a href="about.html">about us</a></li>
                     <li>news</li>
@@ -57,7 +57,7 @@
             </header> <!-- header -->
             <div id="main">
                 <section id="title">
-                    <img src="images/title.svg" alt="title">
+                    <img src="images/title.svg" alt="I've Always Been">
                 </section> <!-- title -->
 
                 <section id="video">
@@ -305,7 +305,7 @@
                     <p class="txt back_txt" id="back_txt1">AND</p>
                     <p class="txt back_txt" id="back_txt2">THAT'S</p>
                     <p class="txt back_txt" id="back_txt3">WHAT</p>
-                    <img src="images/directors.png" alt="directors">
+                    <img src="images/directors.png" alt="IAB studio directors - 빈지노, 김한준, 신동민">
                     <p class="txt front_txt" id="front_txt1">GOT</p>
                     <p class="txt front_txt" id="front_txt2">US</p>
                     <p class="txt front_txt" id="front_txt3">HERE</p>
@@ -378,14 +378,14 @@
                         </ul>
                         <div class="swiper-button-next"></div>
                         <div class="swiper-button-prev"></div>
-                        <div id="bg_circle1" class="bg_circle"><img src="images/bg_circle1.png" alt="bg_circle1"></div>
-                        <div id="bg_circle2" class="bg_circle"><img src="images/bg_circle2.png" alt="bg_circle2"></div>
-                        <div id="bg_circle3" class="bg_circle"><img src="images/bg_circle3.png" alt="bg_circle3"></div>
+                        <div id="bg_circle1" class="bg_circle"><img src="images/bg_circle1.png" alt=""></div>
+                        <div id="bg_circle2" class="bg_circle"><img src="images/bg_circle2.png" alt=""></div>
+                        <div id="bg_circle3" class="bg_circle"><img src="images/bg_circle3.png" alt=""></div>
                     </div>
                 </section> <!-- news -->
             </div> <!-- main -->
             <footer>
-                <img src="images/logo.png" alt="logo">
+                <img src="images/logo.png" alt="IAB studio">
                 <p>
                     서울시 강남구 봉은사로 20 3층<br>
                     사업자 등록 번호 575-580-0034
