--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
     <body>
         <div class="container">
             <header>
-                <h1><a href="index.html">logo</a></h1>
+                <h1><a href="index.html">IAB studio</a></h1>
                 <ul>
                     <li><a href="about.html">about us</a></li>
                     <li>news</li>
